--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <audio id="timeoutS" src="assets/audio/timeout.mp3"></audio>
     <audio id="gameO" src="assets/audio/gameover.mp3"></audio>
     <title>Axolotl Catching Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <canvas id="c"></canvas>
@@ -28,5 +28,5 @@
       <p>GAME OVER</p>
     </div>
   </body>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="js/main.js"></script>
 </html>
